# mongodb-generic-repository

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: database.rs  entities.rs  errors.rs  lib.rs  main.rs  repository.rs  test.rs  tests.rs
src/database/: db_entity.rs  entity_note.rs  entity_user.rs  repository.rs
src/test/: common.rs  note_test.rs  user_test.rs
src/test/entity/: note.rs  user.rs
src/tests/: note_tests.rs  user_tests.rs
