[package]
name = "mongodb-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30" }
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
more-asserts = { version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }