[package]
name = "mongodb-repo"
version = "0.8.0"
edition = "2021"
description = "A generic MongoDB repository in Rust working with different entity structures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jancusra/mongodb-generic-repository"
readme = "README.md"
keywords = ["mongodb", "repository", "database", "generic", "async"]
categories = ["database"]

[lib]
name = "mongodb_repo"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.32", default-features = false }
mongodb = { version = "3.7.0", default-features = false, features = ["bson-3", "rustls-tls", "compat-3-3-0"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros"] }

[dev-dependencies]
more-asserts = { version = "0.3.1", default-features = false }
tokio-test = { version = "0.4.5", default-features = false }